[workspace]
members = ["crankit/input", "crankit/graphics", "crankit/time", "timer", "math2d"]

[package]
name = "play-jam-4"
version = "0.0.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.72"
repository = "https://github.com/jcornaz/play-jam-4"
description = ""
categories = []
keywords = []

[package.metadata.playdate]
bundle-id = "com.github.jcornaz.play-jam-4"

[package.metadata.playdate.assets]

[lib]
crate-type = [
    "dylib", # for simulator
    "staticlib", # for hardware
]

[dependencies]
crankit-input = { path = "crankit/input" }
crankit-graphics = { path = "crankit/graphics" }
crankit-time = { path = "crankit/time" }
timer = { path = "timer" }
math2d = { path = "math2d", default-features = false, features = ["libm", "point"] }
playdate-sys = { version = "0.2.10", default-features = false, features = ["lang-items", "entry-point"] }

[dev-dependencies]


[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
