[workspace]
members = ["crankit/input", "crankit/graphics", "crankit/time", "timer", "math2d", "grid"]

[package]
name = "play-jam-4"
version = "0.0.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.72"
repository = "https://github.com/jcornaz/play-jam-4"
description = ""
categories = []
keywords = []

[package.metadata.playdate]
bundle-id = "com.github.jcornaz.play-jam-4"

[package.metadata.playdate.assets]
"img/levels/level_0.png" = "assets/levels/simplified/level_0/_composite.png"
"img/player-sheet.png" = "assets/player-sheet.png"

[lib]
crate-type = [
    "dylib", # for simulator
    "staticlib", # for hardware
]

[dependencies]
crankit-input = { path = "crankit/input" }
crankit-graphics = { path = "crankit/graphics" }
crankit-time = { path = "crankit/time" }
timer = { path = "timer" }
grid = { path = "grid", default-features = false }
math2d = { path = "math2d", default-features = false, features = ["libm", "point", "serde"] }
playdate-sys = { version = "0.2.10", default-features = false, features = ["lang-items", "entry-point"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }
anyhow = { version = "1.0.75", default-features = false }
smallvec = { version = "1.11.2", default-features = false, features = ["serde"] }
libm = "0.2.8"

[dev-dependencies]


[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
