[workspace]
members = [
    "crankit/graphics",
    "crankit/time",
    "crankit/game-loop",
    "timer",
    "math2d",
    "grid",
    "collision",
]

[package]
name = "play-jam-4"
version = "0.0.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.72"
repository = "https://github.com/jcornaz/play-jam-4"
description = ""
categories = []
keywords = []

[package.metadata.playdate]
bundle-id = "com.github.jcornaz.play-jam-4"

[package.metadata.playdate.assets]
"img/levels/level_0/background.png" = "assets/levels/simplified/level_0/background.png"
"img/levels/level_0/background_deco.png" = "assets/levels/simplified/level_0/background_deco.png"
"img/levels/level_0/foreground.png" = "assets/levels/simplified/level_0/foreground.png"
"img/levels/level_0/foreground_deco.png" = "assets/levels/simplified/level_0/foreground_deco.png"
"img/levels/level_1/background.png" = "assets/levels/simplified/level_1/background.png"
"img/levels/level_1/background_deco.png" = "assets/levels/simplified/level_1/background_deco.png"
"img/levels/level_1/foreground.png" = "assets/levels/simplified/level_1/foreground.png"
"img/levels/level_1/foreground_deco.png" = "assets/levels/simplified/level_1/foreground_deco.png"
"img/player-sheet.png" = "assets/player-sheet.png"
"img/lift.png" = "assets/lift.png"
"img/water/body.png" = "assets/water.png"
"img/water/surface.png" = "assets/water-surface.png"
"img/key.png" = "assets/key.png"
"img/thanks.png" = "assets/thanks.png"

[lib]
crate-type = [
    "dylib", # for simulator
    "staticlib", # for hardware
]

[features]
default = []
draw-fps = []

[dependencies]
crankit-input = "0.3.0"
crankit-graphics = { path = "crankit/graphics" }
crankit-time = { path = "crankit/time" }
crankit-game-loop = { path = "crankit/game-loop" }
timer = { path = "timer" }
grid = { path = "grid", default-features = false }
math2d = { path = "math2d", default-features = false, features = ["libm", "serde"] }
collision = { path = "collision", default-features = false, features = ["libm"] }
playdate-sys = { version = "0.2.11", default-features = false, features = ["lang-items", "entry-point"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }
anyhow = { version = "1.0.75", default-features = false }
libm = "0.2.8"

[dev-dependencies]


[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
