[package]
name = "math2d"
version = "0.0.0"
authors = ["Jonathan Cornaz"]
edition = "2021"
repository = "https://github.com/jcornaz/play-jam-4"
description = "A simple math library for 2d geometry"

[features]
default = ["std", "point"]
std = []
point = []
libm = ["dep:libm"]
serde = ["dep:serde"]

[dependencies]
libm = { version = "0.2.8", optional = true }
serde = { version = "1.0.192", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
