[package]
name = "crankit-input"
version = "0.0.0"
authors = ["Jonathan Cornaz"]
edition = "2021"
repository = "https://github.com/jcornaz/play-jam-4"
description = "Ergonomic input API for the playdate"

[dependencies]
playdate-sys = { version = "0.2.11", default-features = false }

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
